[metadata]
name = sorted_list
version = 1.0.0
author = Megacodist
author_email = megacodist@gmail.com
description = A sorted list for Python.
long_description = file: README.md
license_files = 
    LICENSE
long_description_content_type = text/markdown
url = https://github.com/megacodist/sorted-list/tree/main
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = 
    list
    sorted list

[options]
python_requires = >=3.10
py_modules =
    sorted_list